--- a/DSAcli/DSAcli.csproj
+++ b/DSAcli/DSAcli.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,6 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DecryptVerbOptions.cs" />
+    <Compile Include="EncryptVerbOptions.cs" />
+    <Compile Include="GenerateRSAKeyPair.cs" />
+    <Compile Include="IOutputableOption.cs" />
+    <Compile Include="Program.CodeBehind.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -59,6 +65,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Key.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser">
+      <Version>2.1.1-beta</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
