--- a/DSAEncDecLib/DSAEncDecLib.csproj
+++ b/DSAEncDecLib/DSAEncDecLib.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,14 +41,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="AlgorithmHelpers\BigIntegerHelper.cs" />
+    <Compile Include="AlgorithmHelpers\HCSRAlgorithm.cs" />
+    <Compile Include="AlgorithmHelpers\MaurerAlgorithm.cs" />
+    <Compile Include="AlgorithmHelpers\PrimeExtensions.cs" />
+    <Compile Include="AlgorithmHelpers\RsaHelper.cs" />
+    <Compile Include="CryptoFactory.cs" />
+    <Compile Include="Interfaces\IDecryptor.cs" />
+    <Compile Include="Interfaces\IEncryptor.cs" />
+    <Compile Include="Interfaces\IKeygen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RSAEngine.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\EasySharp\NHelpers\NHelpers.csproj">
       <Project>{cac83cf1-e5d4-45f6-85cc-e0ad29b55a8e}</Project>
       <Name>NHelpers</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.4.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
