--- a/DSAEncDecLib/DSAEncDecLib.csproj
+++ b/DSAEncDecLib/DSAEncDecLib.csproj
@@ -41,17 +41,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AlgorithmHelpers\BigIntegerHelper.cs" />
+    <Compile Include="AlgorithmHelpers\BigIntegerExtensions.cs" />
+    <Compile Include="AlgorithmHelpers\BigIntegerUtil.cs" />
     <Compile Include="AlgorithmHelpers\HCSRAlgorithm.cs" />
     <Compile Include="AlgorithmHelpers\MaurerAlgorithm.cs" />
-    <Compile Include="AlgorithmHelpers\PrimeExtensions.cs" />
+    <Compile Include="AlgorithmHelpers\BigIntegerPrimeExtensions.cs" />
     <Compile Include="AlgorithmHelpers\RsaHelper.cs" />
-    <Compile Include="CryptoFactory.cs" />
-    <Compile Include="Interfaces\IDecryptor.cs" />
-    <Compile Include="Interfaces\IEncryptor.cs" />
+    <Compile Include="DSAEngine.cs" />
+    <Compile Include="SpecificTypes\DSASignature.cs" />
+    <Compile Include="SpecificTypes\DSAPrivateKey.cs" />
+    <Compile Include="SpecificTypes\DSAPublicKey.cs" />
     <Compile Include="Interfaces\IKeygen.cs" />
+    <Compile Include="Interfaces\ISignatureCreator.cs" />
+    <Compile Include="Interfaces\ISignatureValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RSAEngine.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\EasySharp\NHelpers\NHelpers.csproj">
